package br.com.ajf.learnjavadesignpatterns.template;

public interface Game
{
	void start();
	void update();
	void render();
	void display();
}
